# vascular-forensic-obfuscation

./: .gitignore  README.md  pyproject.toml
scripts/data/: fetch_arcade.sh  make_classifier_dataset.py  make_regeneration_dataset_icanj.py
scripts/demos/: anonimizers_comparison.py
scripts/experiments/: test_binary_segmentation.py  test_reconstruction_quality.py
scripts/experiments/attacks/: apply_gradcam.py  apply_saliency_maps.py  check_distributions.py  make_anonymized_dataset_cgan.py  make_anonymized_dataset_diffusion.py  make_anonymized_datasets_simple.py  measure_inference_time.py  train_hospital_classifiers.py
scripts/test/: test_cgan.py  test_diffusion.py
scripts/train/: train_cgan.py  train_diffusion.py
src/angio_gen/: test.py  train.py
src/angio_gen/config/: weights.yaml
src/angio_gen/data/: dataset.py  hospital_dataset.py  transforms.py
src/angio_gen/models/: cgan.py  diffusion.py  hospital_classifier.py
src/angio_gen/utils/: anonimizer.py  config.py  grad_cam.py  hospital_classifier.py  metrics.py  saliency_maps.py  simple_anonimizers.py  writer.py
