[project]
name = "vascular-forensic-obfuscation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "binary-segmentation-angio",
    "clearml>=2.0.2",
    "ddpm>=1.0.0",
    "denoising-diffusion-pytorch>=2.2.5",
    "diffusers>=0.35.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "open-clip-torch>=3.2.0",
    "opencv-python>=4.13.0.90",
    "pyyaml>=6.0.2",
    "pycocotools>=2.0.11",
    "rad-dino>=0.1.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.5.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torcheval>=0.0.7",
    "torchmetrics[image]>=1.8.2",
    "torchvision>=0.24.1",
    "transformers>=4.57.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/angio_gen"]

[tool.uv.sources]
binary-segmentation-angio = { git = "https://github.com/hubmal/binary-segmentation-angio" }
